Backported to 1.20.1 (#167)
* update to minecraft 1.20.2

* bump cursegradle version

* add NeoForge support

* fix build and add name of loader in each file

* bugfix: upstream changes to blitSprite would cause icons to render under their frame, and colors to blend with the icon

Signed-off-by: MeeniMc <68366846+MeeniMc@users.noreply.github.com>

* move to architectury loom, this also includes moving some packages around

* upload correct files to CF and Modrinth

* temporary remove additional files from CF upload and add changelog to modrinth

* update gradle/loom for 1.20.4

Signed-off-by: MeeniMc <68366846+MeeniMc@users.noreply.github.com>

* NeoForge for 1.20.4 does not accept 'mandatory' keyword anymore

Signed-off-by: MeeniMc <68366846+MeeniMc@users.noreply.github.com>

* 1.20.4 java changes: displayInfo.getFrame is now getType, getBackground now returns an Optional

Signed-off-by: MeeniMc <68366846+MeeniMc@users.noreply.github.com>

* update some versions

* Create build.yml

* Update build.yml

* Update build.yml

* move to GitHub Actions for building

* add support for multi line changelog messages

* bump some versions

* Making the icon compatible with Mod Menu (#162)

* Update fabric.mod.json

* Add files via upload

* Create better-advancements

* Added an Icon to make it work with Mod Menu

---------

Co-authored-by: Fate <103455203+MasklessFate@users.noreply.github.com>

* Added ability to translate criteria (#165)

* Added ability to translate criteria

* Bumped version to 0.4.2

* Fixed criterion not using the correct colors and formatting. (#166)

* bump versions for development, prep for next MC version

* update to minecraft 1.20.6

* Backported to 1.20.1

---------

Signed-off-by: MeeniMc <68366846+MeeniMc@users.noreply.github.com>
Co-authored-by: way2muchnoise <jens.baetens@live.be>
Co-authored-by: MeeniMc <68366846+MeeniMc@users.noreply.github.com>
Co-authored-by: Fa